<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/img_bem_v"
    tools:context=".MainActivity">


    <TextView android:text="@string/bem_vindo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="22sp"
        android:textColor="#46535E"
        android:fontFamily="roboto"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:gravity="center" />

    <TextView
        android:text="@string/escolha_opcao"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="roboto"
        android:layout_gravity="center_vertical"
        android:gravity="bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:gravity="top"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_CA"
                android:fontFamily="roboto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/radioButton" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_CAP"
                android:fontFamily="roboto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/radioButton2" />
        </RadioGroup>


    </LinearLayout>




</LinearLayout>
